fix issues with updating link, role truncate, and editor anchor tags

--- a/assets/css/components/editor.css
+++ b/assets/css/components/editor.css
@@ -4,7 +4,9 @@
   }
 
   a {
-    color: theme("colors.blue.600");
+    color: theme("colors.zinc.50");
+    text-decoration: underline;
+    cursor: pointer;
   }
 
   ul,
